@@ -1,5 +1,5 @@
-bin_SCRIPTS = fakechroot ldconfig.fakechroot ldd.fakechroot
-EXTRA_DIST = fakechroot.sh ldconfig.sh ldd.pl restoremode.sh savemode.sh
+bin_SCRIPTS = fakechroot ischroot.fakechroot ldconfig.fakechroot ldd.fakechroot
+EXTRA_DIST = fakechroot.sh ischroot.sh ldconfig.sh ldd.pl restoremode.sh savemode.sh
 CLEANFILES = $(bin_SCRIPTS)
 
 do_subst = sed -e 's,[@]prefix[@],$(prefix),g' \
@@ -13,6 +13,10 @@ do_subst = sed -e 's,[@]prefix[@],$(prefix),g' \
 fakechroot: $(srcdir)/fakechroot.sh
 	$(do_subst) < $(srcdir)/fakechroot.sh > fakechroot
 	chmod +x $@
+
+ischroot.fakechroot: $(srcdir)/ischroot.sh
+	cp $(srcdir)/ischroot.sh ischroot.fakechroot
+	chmod +x ischroot.fakechroot
 
 ldd.fakechroot: $(srcdir)/ldd.pl
 	cp $(srcdir)/ldd.pl ldd.fakechroot
